[package]
name = "learning_rust_by_games"
version = "0.1.0"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="aqrun_lrbg" # crate name short for "Learning rust by games"
path="src/lib.rs"

[dependencies]
rand = "*"
crossterm = "*"
